[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Practice langgraph tutorial"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.8.0",
    "langchain>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
]
